tests/preproc_samples/invalid/next_microinst_label_after_macros.mas
%m m1 {
    !nop;
}

%mi m2 !nop;

%i i {
.l1:
    m1 @.l2;
.l2:
    m2 @.l1;
}